# TinyRenderPlus

./: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
GUI/: editor.cpp  editor.h
Render/: object.cpp  object.h  scene.cpp  scene.h  triangle.cpp  triangle.h
Source/: camera.cpp  camera.h  geometry.cpp  geometry.h  mesh.h  model.h  object.cpp  object.h  rasterizer.cpp  rasterizer.h  scene.cpp  scene.h  scene_config.h  triangle.h
Source/Model/: mesh.cpp  mesh.h  model.cpp  model.h  object.h  texture_pool.cpp  texture_pool.h  triangle.cpp  triangle.h
Source/Render/: rasterizer.cpp  rasterizer.h  render.h  thread_pool.cpp  thread_pool.h
Source/Shader/: bling_phong_shader.cpp  bling_phong_shader.h  shader.cpp  shader.h  shader_data.h  shader_pipeline.cpp  shader_pipeline.h  transform.cpp  transform.h
ThirdPartyLib/: CMakeLists.txt
ThirdPartyLib/tinyrender/: README.md  tgaimage.cpp  tgaimage.h
UnitTest/: CMakeLists.txt  gtest_demo.cc  gtest_demo.cpp  object_test.cpp  texture_pool_test.cpp
